--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.2",
+    "@aws-amplify/ui-react-ai": "^1.5.0",
     "aws-amplify": "^6.14.4",
+    "install": "^0.13.0",
+    "npm": "^10.9.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1"
