--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@aws-amplify/ui-react": "^6.11.2",
     "@aws-amplify/ui-react-ai": "^1.5.0",
     "aws-amplify": "^6.14.4",
+    "aws-sdk": "^2.1692.0",
     "install": "^0.13.0",
     "npm": "^10.9.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "pdf-parse": "^1.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
