--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+  "overrides": {
+    "core-js": "^3.42.0"
   }
 }
