--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "core-js": "^3.42.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
@@ -40,7 +41,7 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   },
-  "overrides": {
-    "core-js": "^3.42.0"
+  "resolutions": {
+    "babel-runtime/core-js": "2.6.12"
   }
 }
