--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
     "@aws-amplify/ui-react-ai": "^1.5.0",
     "aws-amplify": "^6.14.4",
     "aws-sdk": "^2.1692.0",
+    "core-js": "^2.6.12",
     "install": "^0.13.0",
     "npm": "^10.9.2",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1",
-    "core-js": "^3.42.0"
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
-    "@aws-amplify/backend-cli": "^1.7.2",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
